@@ -19,7 +19,7 @@
 # define __NR_inotify_init      275
 # define __NR_inotify_add_watch 276
 # define __NR_inotify_rm_watch  277
-#elif defined(__sparc__)
+#elif defined(__sparc__) || defined (__sparc64__)
 # define __NR_inotify_init      151
 # define __NR_inotify_add_watch 152
 # define __NR_inotify_rm_watch  156
@@ -27,10 +27,22 @@
 # define __NR_inotify_init  1277
 # define __NR_inotify_add_watch 1278
 # define __NR_inotify_rm_watch  1279
-#elif defined (__s390__)
+#elif defined (__s390__) || defined (__s390x__)
 # define __NR_inotify_init  284
 # define __NR_inotify_add_watch 285
 # define __NR_inotify_rm_watch  286
+#elif defined (__arm__)
+# define __NR_inotify_init  316
+# define __NR_inotify_add_watch 317
+# define __NR_inotify_rm_watch  318
+#elif defined (__SH4__)
+# define __NR_inotify_init  290
+# define __NR_inotify_add_watch 291
+# define __NR_inotify_rm_watch  292
+#elif defined (__SH5__)
+# define __NR_inotify_init  318
+# define __NR_inotify_add_watch 319
+# define __NR_inotify_rm_watch  320
 #else
 # warning "Unsupported architecture"
 #endif
